fix: Some layout problems n errors

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+@import "react-datepicker/dist/react-datepicker.css";
 
 @custom-variant dark (&:is(.dark *));
 
@@ -136,4 +137,21 @@
     color: var(--foreground);
     font-family: 'Inter', sans-serif;
   }
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  opacity: 0;
+  display: none;
+}
+
+input[type="date"]::-webkit-input-placeholder { color: #fff; }
+input[type="date"]::-moz-placeholder { color: #fff; }
+input[type="date"]:-ms-input-placeholder { color: #fff; }
+input[type="date"]::placeholder { color: #fff; }
+
+
+
+.react-datepicker__close-icon::after {
+  color: #fff !important;
+  background-color: #c75c5c !important;
 }
